# VolRec

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
example/: pear.json  tape.json
shaders/: lines.frag  lines.vert  overlay.frag  overlay.vert  points.frag  points.vert  voxels.frag  voxels.vert
source/: VolRec.rc  app.cpp  app.hpp  camera.cpp  camera.hpp  global.cpp  global.hpp  input.cpp  input.hpp  main.cpp  overlay.cpp  overlay.hpp  project.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  view.hpp
source/model/: box.cpp  box.hpp  checkers.cpp  checkers.hpp  floor.cpp  floor.hpp  frame.cpp  frame.hpp  frustum.cpp  frustum.hpp  model.cpp  model.hpp  volume.cpp  volume.hpp
source/render/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  index_buffer.cpp  index_buffer.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  voxel.hpp
